[package]
name = "parser"
version = "0.1.0"
authors = ["banunkers <hugwan-6@student.ltu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.3.1"
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0"}